# open-rmf_getting_started

./: README.md  build-docs.md  conf.py  index.md  install-docs.md  install.md  install_build_deps.sh  pyproject.toml
.github/: config.yml
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md  bug_report.yml
docker/: Dockerfile  Dockerfile.base  Dockerfile.openrmf  Dockerfile.rmfdemos  README.md  docker-compose.yml  entrypoint.sh  requirements.txt  run.sh  run_office_demo.sh  setup_display.sh
docs/html/: .buildinfo  README.html  build-docs.html  genindex.html  index.html  install-docs.html  objects.inv  search.html  searchindex.js
docs/html/_downloads/a34114bbdc9546caf9b86c1f0bb4a0c3/: office.building.yaml
docs/html/_sources/: build-docs.md.txt  index.md.txt
docs/html/_sources/open_rmf_custom_map/: README.md.txt
docs/html/open_rmf_custom_map/: README.html
open_rmf_custom_map/: README.md
